fix burger alignment

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -732,6 +732,7 @@ td > code {
     height: 38px;
     padding: 10px 6px;
     cursor: pointer;
+    margin-left: 10px;
   }
 
   .burger span {
